# phenox

./: README.md
LKF_selflocalization/: LKF_phenox.cpp  LKF_phenox0502.cpp  LKF_phenox0508.cpp  Makefile  ReadME.md  ReadME.md~  ar_detect.cpp  ar_detect.h  memo_aruco
LKF_selflocalization/lib/: libaruco.so.1.2.5
boundary/: README.md  boundary_detector.cpp  boundary_detector.h  main.cpp
boundary2/: boundary_detector.cpp  boundary_detector.cpp_old  boundary_detector.h  boundary_detector.h_old  mynodeimgserver.sh  output_ctl  output_deg  output_vision
boundary_detector/: Makefile  README.md  boundary_detector.cpp  boundary_detector.h  test.cpp
control/: .main.cpp.swp  CMakeLists.txt  Makefile  README.md  Readme.txt  boundary_detector.cpp  boundary_detector.h  control.cpp  control.h  main.cpp  mynodeimgserver.sh  parameter.c  parameter.h
control/src/: DataMaker.h  Parser.h  SioClientWrapper.h  main.cpp
merged/: Makefile  README.md  ar_detect.cpp  ar_detect.h  boundary_detector.cpp  control.h  main  main.cpp  main.cpp.nodeserver  main.cpp~  main_noimgserver.cpp  maker.sh  mynodeimgserver.sh  output_deg  output_mu  output_v  output_vision  parameter.c  rc.local  show_output.py
merged/include/: Object.h  boundary_detector.cpp  control.cpp  control.h  marker.h
merged/lib/: libaruco.so.1.2.5
merged/src/: DataMaker.h  Parser.h  SioClientWrapper.cpp  SioClientWrapper.h  ar_detect.cpp  control.cpp
sample/: Makefile  README.md  main.cpp
